--- a/index.html
+++ b/index.html
@@ -4,117 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MotorDay</title>
-    <style>
-        /* Basic Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Space Mono', monospace;
-        }
-
-        body {
-            background-color: #000;
-            color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        /* Main Container */
-        .container {
-            width: 90%;
-            max-width: 600px;
-            padding: 20px;
-            border: 2px solid #00ff00;
-            border-radius: 10px;
-        }
-
-        h1 {
-            text-align: center;
-            color: #00ff00;
-            margin-bottom: 20px;
-        }
-
-        /* Date Section */
-        .date {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-
-        .date input {
-            width: 30%;
-            padding: 5px;
-            border: 1px solid #00ff00;
-            background: #000;
-            color: #ffffff;
-            font-size: 1em;
-        }
-
-        /* Priorities Section */
-        .section {
-            margin-bottom: 20px;
-        }
-
-        .section h2 {
-            color: #00ff00;
-            margin-bottom: 10px;
-            font-size: 1.2em;
-        }
-
-        .priorities input,
-        .todo input {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 5px;
-            border: 1px solid #00ff00;
-            background: #000;
-            color: #ffffff;
-            font-size: 1em;
-        }
-
-        /* Schedule Section */
-        .schedule {
-            max-height: 300px;
-            overflow-y: auto;
-            border: 1px solid #00ff00;
-            padding: 10px;
-        }
-
-        .time-slot {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 5px;
-        }
-
-        .time-slot input {
-            width: 75%;
-            padding: 5px;
-            border: 1px solid #00ff00;
-            background: #000;
-            color: #ffffff;
-        }
-
-        /* Refresh Button */
-        .refresh-button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 20px;
-            font-size: 1em;
-            background-color: #00ff00;
-            color: #000;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .refresh-button:hover {
-            background-color: #ffffff;
-            color: #000;
-        }
-    </style>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <div class="container">
@@ -158,43 +48,7 @@
         <button class="refresh-button" onclick="resetSchedule()">Refresh Day</button>
     </div>
 
-    <script>
-        // Generate schedule with half-hour increments
-        const scheduleList = document.getElementById('schedule-list');
-
-        function generateSchedule() {
-            const startHour = 7;
-            const endHour = 21;
-
-            for (let hour = startHour; hour <= endHour; hour++) {
-                let hourStr = hour < 10 ? '0' + hour : hour;
-
-                // First half of the hour
-                const timeSlot1 = document.createElement('div');
-                timeSlot1.classList.add('time-slot');
-                timeSlot1.innerHTML = `<span>${hourStr}:00</span><input type="text" placeholder="Task">`;
-                scheduleList.appendChild(timeSlot1);
-
-                // Second half of the hour
-                if (hour !== endHour) {
-                    const timeSlot2 = document.createElement('div');
-                    timeSlot2.classList.add('time-slot');
-                    timeSlot2.innerHTML = `<span>${hourStr}:30</span><input type="text" placeholder="Task">`;
-                    scheduleList.appendChild(timeSlot2);
-                }
-            }
-        }
-
-        // Run the schedule generation function
-        generateSchedule();
-
-        // Reset function to clear inputs
-        function resetSchedule() {
-            document.querySelectorAll('input[type="text"]').forEach(input => input.value = '');
-        }
-
-        // Refresh schedule every day (For now, refreshes on page load)
-        window.onload = resetSchedule;
-    </script>
+    <!-- Link to the external JavaScript file -->
+    <script src="javascript.js"></script>
 </body>
 </html>
